<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/home"
        android:title="" />
    <item
        android:id="@+id/navImages"
        android:icon="@drawable/images"
        android:title="" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/profile"
        android:title="" />
</menu>
